--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,8 +36,6 @@
 
     <string name="main_device">Device</string>
     <string name="main_rom">ROM</string>
-    <string name="main_kernel">Kernel</string>
-    <string name="main_about">About</string>
     <string name="main_otaid">OTA Updater ID</string>
 
     <string name="rom_download_ticker">OTA ROM Update Available</string>
@@ -52,20 +50,6 @@
     <string name="rom_version">ROM Version</string>
     <string name="rom_unsupported">Unsupported ROM</string>
     <string name="rom_unsupported_summary">The ROM developer has not enabled support for the OTA Updater! Please ask them (kindly) to add support before using this app!\n\n(rom.ota.prop missing)</string>
-
-    <string name="kernel_download_ticker">OTA ROM Update Available</string>
-    <string name="kernel_download_title">OTA Kernel Update Available: %1$s</string>
-    <string name="kernel_download_details">An OTA Kernel update is available\n\nVersion: %1$s\nChangelog:\n%2$s</string>
-    <string name="kernel_download_progress"> OTA Kernel Update Downloading</string>
-    <string name="kernel_download_failed">OTA Kernel Download Failed</string>
-    <string name="kernel_download_done">OTA Kernel Download Complete</string>
-    <string name="kernel_download_alert_title">Downloading kernel update (%1$s version %2$s)</string>
-    <string name="kernel_toast_no_update">There is no kernel update at this time</string>
-    <string name="kernel_update_to">This update will update your kernel (%1$s) to version %2$s</string>
-    <string name="kernel_version">Kernel Version</string>
-    <string name="kernel_version_unknown">Unknown Kernel Version</string>
-    <string name="kernel_unsupported">Unsupported Kernel</string>
-    <string name="kernel_unsupported_summary">The Kernel developer has not enabled support for the OTA Updater! Please ask them (kindly) to add support before using this app!\n\n(kernel.ota.prop missing)</string>
 
     <string name="alert_nodata_title">No Data Connection!</string>
     <string name="alert_nodata_message">You have no data connection.\nPlease turn on Wi-Fi or Mobile Data in order to check for and download OTA updates.</string>
@@ -84,8 +68,8 @@
     <string name="alert_noinstall_message">Unfortunately, ROMs on your device must be flashed manually.\nPlease use the correct method for your device to flash the ROM\n\nThe .zip file is located at: %1$s</string>
     <string name="alert_update_title">ROM update available!</string>
     <string name="alert_downloading">Downloading…</string>
-    <string name="alert_unsupported_title">Unsupported ROM/Kernel</string>
-    <string name="alert_unsupported_message">The ROM or Kernel developer has not enabled support in the ROM and/or Kernel for the OTA Updater! Please ask them (kindly) to add support before using this app!\n\n(rom.ota.prop and kernel.ota.prop missing)</string>
+    <string name="alert_unsupported_title">Unsupported ROM</string>
+    <string name="alert_unsupported_message">The ROM developer has not enabled support in the ROM for the OTA Updater! Please ask them (kindly) to add support before using this app!\n\n(rom.ota.prop missing)</string>
     <string name="alert_changelog">View Changelog</string>
     <string name="alert_changelog_title">Changelog for version %1$s</string>
 
@@ -105,18 +89,6 @@
     <string name="toast_update_fetch_error">There was an error fetching update information</string>
     <string name="toast_downloading">Your download is still running, check notifications for progress…</string>
 
-    <string name="about_ota_title">OTA Updater</string>
-    <string name="about_ota_summary">Copyright © 2014 - OTA Update Center\nFully open-source\nTap to visit our website</string>
-    <string name="about_version_title">Version</string>
-    <string name="about_version_unknown">Unknown Version (error in package manager)</string>
-    <string name="about_ota_feature_missing_title">Missing OTA Feature File!!</string>
-    <string name="about_ota_feature_missing_summary">The feature XML file is missing from this ROM/Kernel. Without this file, you will not be able to update this app via the Play Store.\n\nPlease contact your ROM/Kernel developer and kindly ask them to add the file. Instructions are available on our website on how to do this.</string>
-    <string name="about_license_title">Open-Source License</string>
-    <string name="about_contrib_title">Contributors</string>
-    <string name="about_feedback_title">Feedback</string>
-    <string name="about_uptodate">Keep Up-to-Date!</string>
-    <string name="about_follow_title">Follow us on Google+</string>
-
     <string name="updates_avail_title">Available Updates</string>
     <string name="updates_checking">Checking for available updates…</string>
     <string name="updates_none">No update available. Tap to check manually.</string>
@@ -124,7 +96,6 @@
     <string name="updates_new">New update: %1$s (version %2$s)\nTap to download/flash!</string>
 
     <string name="downloads_rom_label">Downloading ROM Update</string>
-    <string name="downloads_kernel_label">Downloading Kernel Update</string>
     <string name="downloads_size_progress_b">%1$.1f%% (%2$d / %3$d bytes)</string>
     <string name="downloads_size_progress_kb">%1$.1f%% (%2$d / %3$d KB)</string>
     <string name="downloads_size_progress_mb">%1$.1f%% (%2$d / %3$d MB)</string>
